third_party/WebKit/Source/core/html/HTMLCanvasElement.cpp
@@ -269,6 +269,8 @@ void HTMLCanvasElement::didDraw(const FloatRect& rect)
     clearCopiedImage();
     if (layoutObject())
         layoutObject()->setMayNeedPaintInvalidation();
+    if (m_context && m_context->is2d() && m_context->shouldAntialias() && page() && page()->deviceScaleFactor() > 1.0f)
+        m_dirtyRect.inflate(1);
     m_dirtyRect.unite(rect);
     if (m_context && m_context->is2d() && hasImageBuffer())
         buffer()->didDraw(rect);
