third_party/WebKit/Source/modules/canvas2d/CanvasRenderingContext2D.h
@@ -85,6 +85,7 @@ public:
 
     bool isContextLost() const override;
 
+    bool shouldAntialias() const override;
     void setShouldAntialias(bool) override;
 
     void scrollPathIntoView();
